--- a/.github/workflows/terraform-plan-pr.yml
+++ b/.github/workflows/terraform-plan-pr.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5  # v4
 
       # ── Derive environment from target branch ─────────────────
       - name: Set environment
@@ -65,7 +65,7 @@ jobs:
           esac
 
       - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a  # v4
         with:
           role-to-assume: ${{ steps.role.outputs.arn }}
           aws-region: ${{ steps.domain.outputs.aws_region }}
@@ -75,7 +75,7 @@ jobs:
         run: echo "account_id=$(aws sts get-caller-identity --query Account --output text)" >> "$GITHUB_OUTPUT"
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd  # v3
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
@@ -140,7 +140,7 @@ jobs:
 
       # ── Post combined PR comment ───────────────────────────────
       - name: Post plan comment
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b  # v7
         env:
           ENV_NAME:          ${{ steps.env.outputs.name }}
           FOUNDATION_EXIT:   ${{ steps.plan-foundation.outputs.exit_code }}
