--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,6 +11,10 @@ on:
       - "LICENSE"
       - "docs/**"
 
+permissions:
+  contents: read
+  id-token: write
+
 concurrency:
   group: deploy-dev
   cancel-in-progress: false
